# Ignosi-ECS

./: README.md  azure-pipelines.yml  vcpkg-configuration.json  vcpkg.json
cmake/: arm64-osx-gcc.cmake  arm64-osx-llvm.cmake
lib/: CMakeLists.txt  component.h  ecs_pointer.h  entity.cpp  entity.h  query.cpp  query.h  system.cpp  system.h  type_id.h  world.cpp  world.h
test/: CMakeLists.txt
